--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="layout.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Easter Bunny Debugging</title>
 
-  <!-- External Stylesheets -->
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="layout.css">
-
-  <!-- Google Fonts -->
+<style>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Love+Ya+Like+A+Sister&display=swap" rel="stylesheet">
+</style>  
 </head>
 
 <body>
