--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="layout.css">
-<style>
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Love+Ya+Like+A+Sister&display=swap" rel="stylesheet">
-</style>  
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Love+Ya+Like+A+Sister&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Love+Ya+Like+A+Sister&display=swap');
+  </style>  
 </head>
 
 <body>
