--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Easter Bunny Debugging</title>
 
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="layout.css">
+  <link rel="stylesheet" href="css/layout.css">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Love+Ya+Like+A+Sister&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Love+Ya+Like+A+Sister&display=swap');
